--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ paginate: 5
 email: "rollins.joseph@gmail.com"
 github_username: "fortruce"
 
-url: "fortruce.github.io"
+url: "http://fortruce.github.io"
 
 defaults:
   -
