change host to josephmr.com

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ paginate: 5
 email: "rollins.joseph@gmail.com"
 github_username: "fortruce"
 
-url: "http://fortruce.github.io"
+url: "http://josephmr.com"
 
 highlighter: pygments
 
